# mlops-hello-world

./: .gitignore  Dockerfile  Make_file  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: modelo.sav
src/app/: api.py
