[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ml_project"
version = "0.0.1"
description = "Meu projeto para por um modelo de machine learning em deploy"
authors = [
  { name = "CarlosSenra" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["ml_project"]
include = ["pyproject.toml", "ml_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ml_project"]
force-sort-within-sections = true

